<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/loginTb"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/common_login"
            style="@style/boldFontStyle"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginIdEt"
            android:layout_width="322dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:layout_marginBottom="33dp"
            android:hint="@string/id"
            android:paddingLeft="20dp"
            android:inputType=""
            style="@style/editFontStyle"
            ></EditText>

        <EditText
            android:id="@+id/loginPwEt"
            android:layout_width="322dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:layout_marginBottom="33dp"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            android:inputType=""
            style="@style/editFontStyle"
            ></EditText>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="322dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/common_login"
            style="@style/btnFontStyle"></Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/findIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/findId"
                style="@style/miniFontStyle"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                style="@style/miniFontStyle"></TextView>

            <TextView
                android:id="@+id/findPwText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/findPassword"
                style="@style/miniFontStyle"></TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>